--- a/BagReminderApp/Base.lproj/Main.storyboard
+++ b/BagReminderApp/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Home Address:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rlp-Ha-Wmw">
                                 <rect key="frame" x="255" y="533" width="91" height="21"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="91" id="J1Y-HS-nk8"/>
+                                    <constraint firstAttribute="width" constant="91" id="HVI-Sg-xPL"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -40,8 +40,8 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dB0-Jq-6Br">
                                 <rect key="frame" x="20" y="533" width="62" height="21"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="62" id="q64-9N-E4D"/>
-                                    <constraint firstAttribute="height" constant="21" id="zaN-Zz-CQ6"/>
+                                    <constraint firstAttribute="height" constant="21" id="gr1-Xd-TmY"/>
+                                    <constraint firstAttribute="width" constant="62" id="pOO-Nw-BX9"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <state key="normal" title="Set Home">
@@ -54,7 +54,7 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ecV-qv-O3B">
                                 <rect key="frame" x="488" y="533" width="92" height="21"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="92" id="OPm-7N-ChY"/>
+                                    <constraint firstAttribute="width" constant="92" id="hVw-Tp-Dtp"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <state key="normal" title="Add Location">
@@ -67,25 +67,22 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="JKF-wb-vPX" firstAttribute="top" secondItem="HIg-Pr-uPQ" secondAttribute="bottom" constant="37" id="0cK-NT-Qzi"/>
-                            <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="JKF-wb-vPX" secondAttribute="bottom" constant="8" symbolic="YES" id="0p2-CV-3o6"/>
-                            <constraint firstItem="ecV-qv-O3B" firstAttribute="top" secondItem="HIg-Pr-uPQ" secondAttribute="bottom" constant="8" id="8BH-pJ-CeM"/>
-                            <constraint firstItem="HIg-Pr-uPQ" firstAttribute="trailing" secondItem="tsR-hK-woN" secondAttribute="trailingMargin" id="Ak0-vg-7o0"/>
-                            <constraint firstItem="dB0-Jq-6Br" firstAttribute="baseline" secondItem="ecV-qv-O3B" secondAttribute="firstBaseline" id="D8b-ca-vun"/>
-                            <constraint firstItem="ecV-qv-O3B" firstAttribute="trailing" secondItem="JKF-wb-vPX" secondAttribute="trailing" id="Dec-Si-15h"/>
-                            <constraint firstItem="dB0-Jq-6Br" firstAttribute="top" secondItem="Rlp-Ha-Wmw" secondAttribute="top" id="Dzu-IU-vSD"/>
-                            <constraint firstItem="Rlp-Ha-Wmw" firstAttribute="top" secondItem="HIg-Pr-uPQ" secondAttribute="bottom" constant="8" id="IgC-8Y-OKJ"/>
-                            <constraint firstItem="JKF-wb-vPX" firstAttribute="top" secondItem="Rlp-Ha-Wmw" secondAttribute="bottom" constant="8" symbolic="YES" id="MxC-Xh-ffn"/>
-                            <constraint firstItem="ecV-qv-O3B" firstAttribute="trailing" secondItem="HIg-Pr-uPQ" secondAttribute="trailing" id="Ru7-vP-ReK"/>
-                            <constraint firstItem="dB0-Jq-6Br" firstAttribute="leading" secondItem="JKF-wb-vPX" secondAttribute="leading" id="Spk-zm-3Yz"/>
-                            <constraint firstItem="ecV-qv-O3B" firstAttribute="top" secondItem="Rlp-Ha-Wmw" secondAttribute="top" id="XJr-NT-Vo6"/>
-                            <constraint firstItem="dB0-Jq-6Br" firstAttribute="top" secondItem="HIg-Pr-uPQ" secondAttribute="bottom" constant="8" symbolic="YES" id="YG8-WJ-tGj"/>
-                            <constraint firstItem="Rlp-Ha-Wmw" firstAttribute="centerX" secondItem="JKF-wb-vPX" secondAttribute="centerX" id="Yfz-9b-YrG"/>
-                            <constraint firstItem="ecV-qv-O3B" firstAttribute="baseline" secondItem="dB0-Jq-6Br" secondAttribute="firstBaseline" id="a2a-tg-5KV"/>
-                            <constraint firstItem="JKF-wb-vPX" firstAttribute="top" secondItem="dB0-Jq-6Br" secondAttribute="bottom" constant="8" symbolic="YES" id="axP-To-JNg"/>
-                            <constraint firstItem="HIg-Pr-uPQ" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" id="gxk-h9-oTK"/>
-                            <constraint firstItem="HIg-Pr-uPQ" firstAttribute="leading" secondItem="dB0-Jq-6Br" secondAttribute="leading" id="qav-Wt-FFB"/>
-                            <constraint firstItem="HIg-Pr-uPQ" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" id="zaD-Il-Rkw"/>
+                            <constraint firstItem="ecV-qv-O3B" firstAttribute="top" secondItem="Rlp-Ha-Wmw" secondAttribute="top" id="1gW-1z-Sqt"/>
+                            <constraint firstItem="ecV-qv-O3B" firstAttribute="trailing" secondItem="tsR-hK-woN" secondAttribute="trailingMargin" id="CTE-bJ-Crn"/>
+                            <constraint firstItem="dB0-Jq-6Br" firstAttribute="top" secondItem="Rlp-Ha-Wmw" secondAttribute="top" id="FEv-QL-Yqb"/>
+                            <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="JKF-wb-vPX" secondAttribute="bottom" constant="8" symbolic="YES" id="FNc-ba-zCc"/>
+                            <constraint firstItem="JKF-wb-vPX" firstAttribute="top" secondItem="dB0-Jq-6Br" secondAttribute="bottom" constant="8" symbolic="YES" id="GQP-S3-V6t"/>
+                            <constraint firstItem="dB0-Jq-6Br" firstAttribute="top" secondItem="HIg-Pr-uPQ" secondAttribute="bottom" constant="8" symbolic="YES" id="RjS-md-ryK"/>
+                            <constraint firstItem="HIg-Pr-uPQ" firstAttribute="trailing" secondItem="ecV-qv-O3B" secondAttribute="trailing" id="XeB-Zi-goW"/>
+                            <constraint firstItem="dB0-Jq-6Br" firstAttribute="leading" secondItem="JKF-wb-vPX" secondAttribute="leading" id="aGj-om-V0X"/>
+                            <constraint firstItem="HIg-Pr-uPQ" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" id="aok-fu-Qge"/>
+                            <constraint firstItem="JKF-wb-vPX" firstAttribute="centerX" secondItem="Rlp-Ha-Wmw" secondAttribute="centerX" id="hcn-kT-XPS"/>
+                            <constraint firstItem="dB0-Jq-6Br" firstAttribute="baseline" secondItem="ecV-qv-O3B" secondAttribute="firstBaseline" id="kTW-Z2-Mwq"/>
+                            <constraint firstItem="ecV-qv-O3B" firstAttribute="baseline" secondItem="dB0-Jq-6Br" secondAttribute="firstBaseline" id="nEe-9y-W2Z"/>
+                            <constraint firstItem="HIg-Pr-uPQ" firstAttribute="leading" secondItem="dB0-Jq-6Br" secondAttribute="leading" id="pG3-CD-Ehc"/>
+                            <constraint firstItem="JKF-wb-vPX" firstAttribute="top" secondItem="Rlp-Ha-Wmw" secondAttribute="bottom" constant="8" symbolic="YES" id="pgh-od-OSy"/>
+                            <constraint firstItem="dB0-Jq-6Br" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" id="rlc-QI-OUh"/>
+                            <constraint firstItem="JKF-wb-vPX" firstAttribute="trailing" secondItem="ecV-qv-O3B" secondAttribute="trailing" id="vkT-Q1-F1r"/>
                         </constraints>
                     </view>
                     <connections>
